--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ssh-ts",
   "scripts": {
+    "dev": "ts-node-dev --respawn --watch src",
     "dev-server": "ts-node-dev --respawn --watch src src/server.ts",
     "dev-client": "ts-node-dev --respawn --watch src src/client.ts"
   },
